[project]
name = "the-pytorch-factory"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "BaptisteMorisse", email = "bmorisse.pro@proton.me" }
]
dependencies = [
    "torch>=2.3.0",
    "pyyaml>=6.0.1",
    "tomli>=2.0.1",
    "typer>=0.12.3",
    "einops>=0.8.0",
    "rich>=13.7.1",
    "pydantic>=2.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-examples>=0.0.10",
    "ruff>=0.4.4",
    "pre-commit>=3.7.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/the_pytorch_factory"]
